--- a/bower.json
+++ b/bower.json
@@ -24,12 +24,13 @@
   ],
   "dependencies": {
     "polymer": "^1.9.0",
-    "px-d3-imports": "^2.1.0"
+    "px-d3-imports": "^2.1.0",
+    "px-toggle": "^2.1.0"
   },
   "devDependencies": {
     "px-headings-design": "^1.0.0",
     "px-layout-design": "^1.0.0",
-    "px-toggle-design": "^2.0.0",
+    "px-toggle-design": "^2.0.5",
     "px-starter-kit-design": "^1.0.0",
     "px-demo": "^2.0.0",
     "px-theme": "^3.0.0",
